[package]
name = "multi_threaded_ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bincode = "3.0.0"
features = "0.10.0"
derive = "1.0.0"
ed25519-dalek = { version = "2.2.0", features = ["serde", "pkcs8"] }
