[package]
name = "multi_threaded_ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bincode = "1.3.3"
features = "0.10.0"
derive = "1.0.0"
ed25519-dalek = { version = "2.2.0", features = ["serde", "pkcs8", "rand_core"] }
rand = "0.10.0"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4.3"
criterion = "0.8.2"
crossbeam = "0.8.4"

[[bench]]
name = "ledger_benches" # This MUST match the name of your file exactly
harness = false
